# wbia-plugin-miew-id

./: .gitignore  .gitmodules  DISTRIBUTED_TRAINING.md  README.md  main.py  pyproject.toml  requirements.txt  run_script.sh  run_train_parallel.sh  slurm_train_multinode.sh  slurm_train_single_node.sh  start_jupyter.sh
runs/default_zebra/default_zebra/: default_zebra.yaml
wbia_miew_id/: _plugin.py  evaluate.py  train.py  train_parallel.py
wbia_miew_id/configs/: config_zebra.yaml
wbia_miew_id/engine/: eval_fn.py
wbia_miew_id/examples/: finetune.ipynb
wbia_miew_id/models/: model_helpers.py
wbia_miew_id/notebooks/: sanity_check.ipynb
wbia_miew_id/visualization/: helpers.py  pairx_draw.py
